--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /var/www/html/firstnextcicd
+    destination: /var/www/html/news
 hooks:
   ApplicationStart:
     - location: scripts/start_server.sh
