--- a/appspec.yml
+++ b/appspec.yml
@@ -3,6 +3,8 @@ os: linux
 files:
   - source: /
     destination: /var/www/html/news
+    overwrite: true
+file_exists_behavior: OVERWRITE
 hooks:
   ApplicationStart:
     - location: scripts/start_server.sh
