--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "node_modules/next/dist/bin/next start -p 3020",
+    "start": "next start -p 3000",
     "lint": "next lint"
   },
   "dependencies": {
