--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@types/dateformat": "^5.0.0",
     "axios": "^1.2.2",
     "dateformat": "^5.0.3",
     "eslint": "8.31.0",
