--- a/appspec.yml
+++ b/appspec.yml
@@ -4,6 +4,7 @@ files:
   - source: /
     destination: /var/www/html/news
     overwrite: true
+file_exists_behavior: OVERWRITE
 hooks:
   ApplicationStart:
     - location: scripts/start_server.sh
