--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 3000",
+    "start": "node_modules/next/dist/bin/next start -p 3000",
     "lint": "next lint"
   },
   "dependencies": {
@@ -20,7 +20,6 @@
     "@types/dateformat": "^5.0.0",
     "axios": "^1.2.2",
     "dateformat": "^5.0.3",
-    "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
@@ -29,6 +28,7 @@
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
-    "@types/dateformat": "^5.0.0"
+    "@types/dateformat": "^5.0.0",
+    "eslint": "8.31.0"
   }
 }
