--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.3",
     "@next/font": "13.1.1",
+    "@types/dateformat": "^5.0.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
-    "@types/dateformat": "^5.0.0",
     "axios": "^1.2.2",
+    "bootstrap": "^5.2.3",
     "dateformat": "^5.0.3",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "typescript": "4.9.4",
     "use-sound": "^4.0.1"
   },
