--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    ,
+    "component/pages/slider/slider copy.tsxrrr"
     "jsx": "preserve",
     "incremental": true
   },
