--- a/package.json
+++ b/package.json
@@ -22,11 +22,17 @@
     "bootstrap": "^5.2.3",
     "dateformat": "^5.0.3",
     "eslint-config-next": "13.1.1",
+    "i": "^0.3.7",
     "next": "13.1.1",
+    "npm": "^9.4.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
+    "react-elastic-carousel": "^0.11.5",
+    "react-fast-marquee": "^1.3.5",
+    "react-multi-carousel": "^2.8.2",
     "react-responsive-carousel": "^3.2.23",
+    "styled-components": "^5.3.6",
     "typescript": "4.9.4",
     "use-sound": "^4.0.1"
   },
